# huggify-data

./: LICENSE  README.md  pyproject.toml
huggify_data/: bot_modules.py  generate_md_modules.py  modules.py  push_modules.py  scrape_modules.py  train_modules.py
