[tool.poetry]
name = "huggify-data"
version = "0.1.2"
description = "This is a helper library to push data to HuggingFace."
authors = ["Yiqiao Yin <eagle0504@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "2.0.0"
pandas = "2.2.2"
matplotlib = "3.9.0"
datasets = "2.20.0"
huggingface-hub = "0.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
