[tool.poetry]
name = "huggify-data"
version = "0.3.6"
description = "This is a helper library to push data to HuggingFace."
authors = ["Yiqiao Yin <eagle0504@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "1.24.4"
pandas = "2.2.2"
matplotlib = "3.9.0"
datasets = "2.20.0"
huggingface-hub = "0.23.4"
openai = "^1.35.3"
pymupdf = "^1.24.5"
tqdm = "^4.66.4"
accelerate = "^0.20.3"
peft = "0.4.0"
bitsandbytes = "0.40.2"
transformers = "4.31.0"
trl = "0.4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
